discussion/kv_engine/174237/174237_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50984: Remove 'force' arg from CM::checkOpenCheckpoint()

Replaced by a direct call to addNewCheckpoint().

Change-Id: I114e2d64a49fc00135b98efa1fd9f5f88a91b5ef

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-04-27 08:45:31.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-27 08:59:12.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45700/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45700/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6698/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6698/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27244/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27244/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6791/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6791/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19869/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19869/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17967/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17967/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17035/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17035/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17035/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18827/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">6 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18827/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19171/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">6 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19171/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38382/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16003/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
